2006-07-09  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkprintunixdialog.c: set_* method returns self.
	* src/rbgtkprintsettings.c: ditto.
	* src/rbgtkpagesetupunixdialog.c: ditto.

	* src/rbgtkprintoperationpreview.c: implemented
	GtkPrintOperationPreview.

	* src/rbgtkprintoperation.c: implemented GtkPrintError.

	* src/rbgtkprintunixdialog.c: implemented GtkPrintCapabilities.

	* src/rbgtkprintsettings.c: implemented GtkPrintSettings,
	GtkPageOrientation, GtkPrintDuplex, GtkPrintQuality,
	GtkPrintPages and GtkPageSet.

2006-07-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkprintoperation.c: implemented GtkPrintOperation,
	GtkPrintStatus, GtkPrintOperationResult and
	GtkPrintOperationAction.

2006-07-08  Pascal Terjan  <pterjan@linuxfr.org>

	* src/rbgtkwindow.c: Added Gtk::Window#group

2006-07-08  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtkpagesetupunixdialog.c: implemented
	GtkPageSetupUnixDialog bindings.
	* extconf.rb: detected whether GtkPageSetupUnixDialog is available
	or not.

	* src/rbgtkprintunixdialog.c: implemented GtkPrintUnixDialog bindings.
	* extconf.rb: detected whether GtkPrintUnixDialog is available or not.

2006-07-01  Kouhei Sutou  <kou@cozmixng.org>

	* src/rbgtklabel.c: removed debug codes.

2006-07-01  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtkmain.c: Show error messages when initializing GTK+.
	bug #1328554.

2006-06-30  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/rbgtk.c: Move poll funcs to glib/src/rbglib_mainloop.c.
        And fixed the bug #1385468.

2006-06-18  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gtk2/base.rb: Added header part.

2006-06-17  Masao Mutoh  <mutoh@highway.ne.jp>

	* src/lib/gtk2.rb, src/lib/gtk2/base.rb: samples/*.rb:
	Gtk.init is called at gtk2.rb now. So you don't need to call Gtk.init by
	yourself. If you need not to call Gtk.init, require 'gtk2/base' instead.
	* src/rbgtkmain.c: Callback functions protect exceptions.
	If an exception is raised, applications are exited with error
	messages.