@@ -1,5 +1,7 @@
 2006-07-09  Kouhei Sutou  <kou@cozmixng.org>
 
+	* src/rbgtkprintcontext.c: implemented GtkPrintContext.
+
 	* src/rbgtkprintunixdialog.c: set_* method returns self.
 	* src/rbgtkprintsettings.c: ditto.
 	* src/rbgtkpagesetupunixdialog.c: ditto.
